# cmdr-cxx

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .options.cmake  .version.cmake  CHANGELOG  CMakeLists.txt  README.md  build.sh  cmdr-cxx.pc.in  orb-build.sh
.github/: CODEOWNERS  FUNDING.yml  constants.env
.github/workflows/: cmake.yml
addons/loaders/: yaml_loader.cmake  yaml_loader.hh
ci/vcpkg/ports/cmdr-cxx/: portfile.cmake  vcpkg.json
cmake/: add-policies.cmake  config-base.h.in  cxx-detect-compilers.cmake  cxx-macros.cmake  cxx-standard-def.cmake  debug-cmd.cmake  deps-cmdr11.cmake  deps_inc_catch2.cmake  deps_inc_fmt.cmake  deps_inc_spdlog.cmake  detect-systems.cmake  dummy-project.cmake  install-pack-helpers.cmake  lexer-tools.cmake  load-catch2.cmake  load-cmdr-cxx.cmake  load-flex.cmake  load-googletest.cmake  load-llvm.cmake  modules-dir.md  options-def.cmake  options.cmake  package-deb.cmake  package-dmg.cmake  package-rpm.cmake  pkg-mgmt.cmake  prerequisites.cmake  setup-build-env.cmake  target-dirs.cmake  utils.cmake  vcpkg-integration.cmake  version-def.cmake  version.h.in  versions-extract.py  versions-gen.cmake
cmake/old/: a-c-p-v.cmake.in  cxx-standard-def.cmake  deps_inc_catch2.cmake  deps_inc_fmt.cmake  deps_inc_spdlog.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  cmdr-c11.in.doxygen  customdoxygen.css  footer.html  header.html  release-v0.6.0.txt  release-v0.6.1.txt
examples/: CMakeLists.txt  app1.cc  app2.cc  second_src.cc  second_src.hh  simple-app.cc
examples/more/: CMakeLists.txt
examples/more/app1/: CMakeLists.txt  custom_iterator.hh  main.cc  null_stream.cc  small_cases.cc
examples/more/app2/: CMakeLists.txt  main.cc
libs/: CMakeLists.txt
libs/cmdr11/: CMakeLists.txt  cmdr11-private.hh
libs/cmdr11/cmake/: cmdr11Config.cmake
libs/cmdr11/include/: cmdr-cxx.hh
libs/cmdr11/include/cmdr11/: cmdr11.hh  cmdr_app.hh  cmdr_app_inl.h  cmdr_arg.hh  cmdr_chrono.hh  cmdr_cmd.hh  cmdr_cmd_inl.h  cmdr_cmn.hh  cmdr_common.hh  cmdr_dbg.hh  cmdr_defs.hh  cmdr_if.hh  cmdr_imp1.hh  cmdr_impl.hh  cmdr_internals.hh  cmdr_ios.hh  cmdr_log.hh  cmdr_mmap.hh  cmdr_opts.hh  cmdr_os_io_redirect.hh  cmdr_path.hh  cmdr_pipeable.hh  cmdr_pool.hh  cmdr_priority_queue.hh  cmdr_process.hh  cmdr_public.hh  cmdr_small_string.hh  cmdr_string.hh  cmdr_terminal.hh  cmdr_types.hh  cmdr_types_check.hh  cmdr_utils.hh  cmdr_var_t.hh  cmdr_var_t_inl.h  cmdr_x_class.hh  cmdr_x_test.hh  cmdr_z_test.hh
libs/cmdr11/src/: main.cc  private.cc
libs/cmdr11/tests/: CMakeLists.txt  main.cxx  test_store.cc
src/: CMakeLists.txt
src/app1/: CMakeLists.txt  custom_iterator.hh  main.cc  null_stream.cc  small_cases.cc
src/app2/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  any_1.cc  app1.cc  app2.cc  basic.cc  c2_store.cc  chrono_literals_test.cc  chrono_test.cc  compiler.cc  complex_test.cc  factory.cc  flags_c2.cc  inplace_constructions.cc  jaro_c2.cc  mem_test_for_singleton.cc  observer.cc  pool.cc  priority_queue.cc  process.cc  second_src.cc  second_src.hh  sso_test_1.cc  sso_test_2.cc  store_c2.cc  traits.cc  valarray_test.cc  visit_any.cc  visit_any.hh
tests/etc/: ex-app1.yml
tests/etc/app1/: app1.yml
tests/etc/app2/: app2.yml
